feat: add messages endpoint